# bluemira

./: .dockerignore  .env.default  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  3D_LEA-WP.py  3d-bar.msh  ACKNOWLEDGEMENTS.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Gen_plane_strain_LEA-WP.py  MANIFEST.in  README.md  WP_sector_Plane_Strain_Analysis.py  conftest.py  docker-compose.yml  env.Dockerfile  gen_params_json.py  main.py  neufrustum4.msh  plane_strain_360_LEA.py  plane_strain_LEA-WP.py  poly16b.msh  pyproject.toml  pytest.ini  release_workflow.rst  requirements-conda.txt  requirements-develop.txt  requirements-examples.txt  requirements.txt  setup.cfg  setup.py  text.py  versioneer.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  eu_demo_bug_report.md  eu_demo_feature_request.md  feature_request.md  feature_request.yml  step_bug_report.md  step_feature_request.md  task.yaml
.github/PULL_REQUEST_TEMPLATE/: eu_demo_pull_request_template.md  pull_request_template.md  step_pull_request_template.md
.github/workflows/: check_release_due.yml  ci.yml  ci_pr.yml  ci_pull_request.yml  ci_push.yml  comments.yml  dependabot_helper.yml  dependencies_pr.yml  docker.yml  documentation-preview.yml  examples.yml  fast_forward_merge.yml  ff.yml  merge_develop.yml  pin_dependencies.yml  release.yml
BLUEPRINT/: __init__.py  blueprint_cli.py  reactor.py
BLUEPRINT/base/: __init__.py  baseclass.py  config_schema.py  constants.py  error.py  file.py  lookandfeel.py  names.py  palettes.py  parameter.py  typebase.py
BLUEPRINT/beams/: constants.py  crosssection.py  element.py  geometry.py  loads.py  material.py  matrixops.py  model.py  node.py  plotting.py  result.py  stress.py  symmetry.py  transformation.py
BLUEPRINT/cad/: __init__.py  blanketCAD.py  buildingCAD.py  cadtools.py  centralcolumnshieldCAD.py  coilCAD.py  component.py  cryostatCAD.py  display.py  divertorCAD.py  firstwallCAD.py  hcdCAD.py  mixins.py  model.py  plasmaCAD.py  reactorCAD.py  shieldCAD.py  step_writer.py  vesselCAD.py
BLUEPRINT/codes/: __init__.py  jetto.py  wrapper.py
BLUEPRINT/costs/: calculator.py  constants.py
BLUEPRINT/equilibria/: __init__.py  boundary.py  coils.py  constants.py  constraints.py  eqdsk.py  eqmanip.py  equilibrium.py  find.py  force.py  gradshafranov.py  gridops.py  limiter.py  numvcontrol.py  optimiser.py  passive.py  physics.py  plotting.py  positioner.py  profiles.py  run.py  shapes.py  solve.py
BLUEPRINT/fuelcycle/: blocks.py  cycle.py  lifecycle.py  tfvutils.py  timeline.py
BLUEPRINT/geometry/: __init__.py  boolean.py  constants.py  geombase.py  geomtools.py  inscribedrect.py  loop.py  offset.py  optimiser.py  parameterisations.py  shape.py  shell.py  stringgeom.py
BLUEPRINT/magnetostatics/: analytical.py  baseclass.py  biot_savart.py  circular_arc.py  current_source.py  greens.py  semianalytic_2d.py  trapezoidal_prism.py  utilities.py
BLUEPRINT/materials/: __init__.py  cache.py  constants.py  material.py  mixtures.py
BLUEPRINT/neutronics/: __init__.py  constants.py  openmcwrapper.py  openmoc_geometry_tools.py  openmoc_plotting_tools.py  plasma_source.py  simpleneutrons.py
BLUEPRINT/nova/: coilcage.py  firstwall.py  optimiser.py  stream.py  structuralsolver.py  structure.py
BLUEPRINT/syscodes/: PROCESSwrapper.py  postPROCESS.py
BLUEPRINT/systems/: __init__.py  baseclass.py  blanket.py  buildings.py  centralcolumnshield.py  config.py  crosssection.py  cryostat.py  divertor.py  divertor_silhouette.py  firstwall.py  firstwall_new.py  firstwall_transition.py  hcd.py  maintenance.py  mixins.py  optimisation_callbacks.py  pfcoils.py  physicstoolbox.py  plasma.py  plotting.py  powerbalance.py  refactored_tf_trial.py  tfcoils.py  tfv.py  thermalshield.py  vessel.py
BLUEPRINT/utilities/: __init__.py  _plasmaloop.json  colortools.py  csv_writer.py  optimisation.py  plottools.py  powerlearn.py  pypetdatabase.py  tools.py
_TIAGO_FILES_/: Tools.py  display_implementation.py
_TIAGO_FILES_/SCRIPTS/: EUDEMO_powercycle_builder.py  TEST_COMMANDS.py  steam_props_test.py
_TIAGO_FILES_/SIMLINKS/: plasmod
bluemira/: __init__.py  _version.py  gen_params.py
bluemira/_external_api/: __init__.py  _freecadapi.py  error.py
bluemira/balance_of_plant/: 0D_steady_state.py  __init__.py  base.py  calculations.py  (+4 more)
conda/: environment-minimal.yml  environment.yml  mambaforge-init.sh  miniforge-init.sh
data/: .gitignore  .gitkeep
docker/: Dockerfile  Dockerfile.apt_22  Dockerfile.new  conda.Dockerfile  conda.Dockerfile.dockerignore  docker-compose.yml  docker_compose.yaml  docker_compose_devel.yaml  env.Dockerfile
eudemo/: README.md  assign_mats.py  run_cad_neutronics.py  show_dagmc_model.py
examples/: BLUEPRINT_integration.py  DN.py  EUDEMO.py  NT.py  README.md  ST.py  convert_py_to_ipynb.ipynb  convert_py_to_ipynb.py
mirapy/: Utils.py  __init__.py  algebra.py  const.py  core.py  critical.py  dolfinSolver.py  emag.py  equilibrium.py  femhelper.py  geo.py  machine.py  meshing.py  msh2xdmf.py  plotting.py
neutronics/: make_geometry.py  pandas_df_functions.py  quick_tbr_heating.py
newcode/: a.py  example_simple_coil.py  fem_magnetostatic.py
requirements/: all.txt  base.txt  conda.txt  develop.txt  examples.txt
scripts/: README.md  blueprint_copy.py  build-coin.sh  conda_less_install.md  copyright_update.py  format_warning_report.py  hacks.sh  install-coin.sh  install-conda.sh  install-freecad-deps.sh  install-freecad.sh  install-msh2xdmf.sh  install-openmc.sh  install-pivy.sh  install-process.sh  install-pyside2-tools.sh  run_examples  run_examples.py  update_dependencies.sh  update_process_variable.py  version_checker.py
source_files/: README.md  blanket_face.npy  make_geometry.py  make_materials.py  pandas_df_functions.py  quick_tbr_heating.py  volume_functions.py
tests/: __init__.py  _helpers.py  conftest.py  test_algebra.py  test_blueprint_cli.py  test_emag.py  test_gen_params.py  test_reactor.py  test_version.py
(+2418 files in other folders)
